--- a/InvoiceX/InvoiceX.csproj
+++ b/InvoiceX/InvoiceX.csproj
@@ -67,8 +67,15 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="pages\StartUp.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="pages\StartUp.xaml.cs">
+      <DependentUpon>StartUp.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -93,6 +100,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\book.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\new-file.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Images\home.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Assets\Images\home.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
