--- a/InvoiceX/InvoiceX.csproj
+++ b/InvoiceX/InvoiceX.csproj
@@ -67,12 +67,19 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="pages\InvoiceEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="pages\StartUp.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="pages\InvoiceEditor.xaml.cs">
+      <DependentUpon>InvoiceEditor.xaml</DependentUpon>
+    </Compile>
     <Compile Include="pages\StartUp.xaml.cs">
       <DependentUpon>StartUp.xaml</DependentUpon>
     </Compile>
